cleaned up colors

--- a/frontend/src/components/booking/SelectListInline/SelectListInline.css
+++ b/frontend/src/components/booking/SelectListInline/SelectListInline.css
@@ -10,5 +10,5 @@
 #select-list-inline #select-list-item {
 	width: 100%;
 	text-align: center;
-	background-color: var(--secondaryColor);
+	background-color: var(--secondaryColorLight);
 }
