--- a/frontend/src/components/booking/bookingCalendarView/NextDayButton/NextDayButton.css
+++ b/frontend/src/components/booking/bookingCalendarView/NextDayButton/NextDayButton.css
@@ -1,5 +1,5 @@
 #next-day-button {
-	background-color: var(--secondaryColor);
+	background-color: var(--secondaryColorDark);
 	width: 25px;
 	height: 50px;
 	padding: 0;
