--- a/frontend/src/components/booking/bookingCalendarView/BookingCalendarView3Day/BookingCalendarView3Day.css
+++ b/frontend/src/components/booking/bookingCalendarView/BookingCalendarView3Day/BookingCalendarView3Day.css
@@ -17,7 +17,7 @@
 }
 
 #booking-calendar-view-3-day #day-columns .day-column-title {
-	background-color: var(--secondaryColor);
+	background-color: var(--secondaryColorDark);
 	height: 50px;
 	border-radius: 5px;
 	display: flex;
