--- a/frontend/src/components/booking/SelectListInline/SelectListInline.css
+++ b/frontend/src/components/booking/SelectListInline/SelectListInline.css
@@ -9,6 +9,46 @@
 
 #select-list-inline #select-list-item {
 	width: 100%;
+	height: 80px;
 	text-align: center;
-	background-color: var(--secondaryColorLight);
+	background-color: var(--secondaryColorDark);
+	margin-bottom: 10px;
+	position: relative;
+	border-radius: 5px;
+	border: none;
+	transition: 0.3s;
+}
+
+#select-list-inline #select-list-item:hover {
+	position: relative;
+	width: 100%;
+	height: 80px;
+	border-radius: 5px;
+	border: none;
+	background-color: var(--primaryColor);
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+#select-list-inline .select-list-label {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100%;
+	height: 80px;
+	border-radius: 5px;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+#select-list-inline .select-list-input {
+	display: none;
+}
+
+#select-list-inline .select-list-input:checked ~ label {
+	background: var(--primaryColor);
 }
