--- a/frontend/src/components/booking/bookingCalendarView/DayColumnSelectTime/DayColumnSelectTime.css
+++ b/frontend/src/components/booking/bookingCalendarView/DayColumnSelectTime/DayColumnSelectTime.css
@@ -21,7 +21,7 @@
 	height: 50px;
 	border-radius: 5px;
 	border: none;
-	background-color: var(--primaryColor);
+	background-color: var(--primaryColorLight);
 	cursor: pointer;
 	transition: 0.3s;
 }
@@ -57,5 +57,5 @@
 }
 
 #select-list-block .select-list-input:checked ~ label {
-	background: var(--primaryColor);
+	background: var(--primaryColorLight);
 }
