--- a/frontend/src/components/payment/Invoice/Invoice.css
+++ b/frontend/src/components/payment/Invoice/Invoice.css
@@ -1,3 +1,8 @@
 #invoice table {
 	width: 100%;
+	max-width: 800px;
+	margin: 0 auto;
+	background-color: var(--secondaryColorLight);
+	padding: 10px;
+	border-radius: 5px;
 }
