--- a/frontend/src/components/booking/bookingCalendarView/NextDayButton/NextDayButton.css
+++ b/frontend/src/components/booking/bookingCalendarView/NextDayButton/NextDayButton.css
@@ -1,5 +1,5 @@
 #next-day-button {
-	background-color: var(--secondaryColorDark);
+	background-color: var(--next-day-button-bg-color);
 	width: 25px;
 	height: 50px;
 	padding: 0;
@@ -12,6 +12,14 @@
 	cursor: not-allowed !important;
 }
 
+#next-day-button:disabled:hover {
+	opacity: 0.5;
+	cursor: not-allowed !important;
+	background-color: var(--next-day-button-bg-color);
+}
+
 #next-day-button:hover {
+	background-color: var(--next-day-button-bg-color-hover);
 	cursor: pointer;
+	transition: 200ms;
 }
