--- a/frontend/src/components/system/navbar/NavbarTop/NavbarTop.css
+++ b/frontend/src/components/system/navbar/NavbarTop/NavbarTop.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	background-color: black;
-	color: var(--secondaryColorDark);
+	color: var(--secondaryColorDarker);
 }
 
 #navbar-top #navbar-top-heading {
@@ -29,7 +29,7 @@
 
 #navbar-top #navbar-top-options a {
 	text-decoration: none;
-	color: var(--secondaryColorDark);
+	color: var(--secondaryColorDarker);
 }
 
 #navbar-top #navbar-top-options a.active {
