--- a/frontend/src/components/system/navbar/NavbarTop/NavbarTop.css
+++ b/frontend/src/components/system/navbar/NavbarTop/NavbarTop.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	background-color: black;
 	color: var(--secondaryColorDarker);
+	font-size: 22px;
 }
 
 #navbar-top #navbar-top-heading {
@@ -41,14 +42,14 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 10px 20px;
-	height: calc(100vh - 80px);
+	padding: 30px 20px 50px 20px;
+	height: calc(100vh - 140px);
 }
 
 #navbar-top #navbar-top-options.expanded #navbar-top-options-nav {
 	display: flex;
 	flex-direction: column;
-	gap: 30px;
+	gap: 50px;
 }
 
 #navbar-top #navbar-top-options.expanded #navbar-top-options-logout {
