fixed margins on booking page

--- a/frontend/src/components/booking/SelectListInline/SelectListInline.css
+++ b/frontend/src/components/booking/SelectListInline/SelectListInline.css
@@ -5,6 +5,7 @@
 	flex-direction: row;
 	justify-content: space-around;
 	gap: 10px;
+	margin: 0;
 }
 
 #select-list-inline #select-list-item {
@@ -12,7 +13,6 @@
 	height: 80px;
 	text-align: center;
 	background-color: var(--secondaryColorDark);
-	margin-bottom: 10px;
 	position: relative;
 	border-radius: 5px;
 	border: none;
