--- a/frontend/src/components/system/buttons/ButtonMD/ButtonMD.css
+++ b/frontend/src/components/system/buttons/ButtonMD/ButtonMD.css
@@ -5,6 +5,10 @@
 	padding: 0;
 	border-radius: 5px;
 	border: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 4px;
 }
 
 .buttonMD:disabled {
